  michim)

  ZOOKEEPER-1928. add configurable throttling to the number of snapshots
  concurrently sent by a leader (Edward Carter via fpj)

  ZOOKEEPER-827. enable r/o mode in C client library (rgs via fpj)

  ZOOKEEPER-1346. Add Jetty HTTP server support for four letter words.
  (Skye Wanderman-Milne, Bill Havanki via phunt)

BUGFIXES:
  ZOOKEEPER-2013. Typos in programmer guide. (Tim Chambers via Alex Shraer)  

  ZOOKEEPER-2006. Standalone mode won't take client port from dynamic config. (Hongchao Deng via Alex Shraer)  

  ZOOKEEPER-2008. Missing leader election port in system test. (Kfir Lev-Ari via Alex Shraer).

  ZOOKEEPER-1992. Backward compatibility of the static configuration file (Hongchao Deng via Alex Shraer).

  ZOOKEEPER-1900. NullPointerException in truncate (Camille Fournier)

  ZOOKEEPER-786. Exception in ZooKeeper.toString
  (Thomas Koch via phunt)

  ZOOKEEPER-1191. Synchronization issue - wait not in guarded block (Alex Shraer via breed)

  ZOOKEEPER-1192. Leader.waitForEpochAck() checks waitingForNewEpoch instead of checking electionFinished (Alex Shraer via breed)

  ZOOKEEPER-1203. Zookeeper systest is missing Junit Classes
  (Prashant Gokhale via phunt)
  
  ZOOKEEPER-1174. FD leak when network unreachable (Ted Dunning via camille)

  ZOOKEEPER-1206. Sequential node creation does not use always use
  digits in node name given certain Locales. (Mark Miller via phunt)

  ZOOKEEPER-1212. zkServer.sh stop action is not conformat with LSB
  para 20.2 Init Script Actions (Roman Shaposhnik via phunt)

  ZOOKEEPER-1190. ant package is not including many of the bin scripts
  in the package (zkServer.sh for example) (Eric Yang via phunt)

  ZOOKEEPER-1241. Typo in ZooKeeper Recipes and Solutions
  documentation (Jingguo Yao via phunt)

  ZOOKEEPER-1220. ./zkCli.sh 'create' command is throwing
  ArrayIndexOutOfBoundsException (kavita sharma via phunt)

  ZOOKEEPER-1256. ClientPortBindTest is failing on Mac OS X
  (Daniel Gómez Ferro via phunt)
  